# tripta-heat-PID

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/espressif__esp-modbus/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: audit.md  autotuning_methods.md  bootloader.mmd  reorganizacion_core.md  summary.mmd
docs/autotune/: astrom_hagglund_method.md  autotune.md  autotune.mmd  autotuning_methods.md  math_foundations.md
docs/connectivity/: arquitectura_red_websocket.md  componentsDiagram.mmd  initFlow.mmd  sequenceDiagram.mmd  serverArq.mmd
main/: CH422G.h  CMakeLists.txt  DEV_Config.h  idf_component.yml  lvgl_port.h  main.c  pid_controller.c  pid_controller.h  sensor.c  ui_chart_data.c  ui_chart_data.h  update.c
main/bootloader/: CMakeLists.txt  bootloader_config.h  bootloader_main.c  bootloader_main.h  integrity_checker.c  integrity_checker.h  recovery_mode.c  recovery_mode.h  sd_recovery.c  sd_recovery.h
main/core/: CMakelists.txt  bt.c  bt.h  main.c  network_config.h  pid_controller.c  pid_controller.h  statistics.c  statistics.h  system_test.c  system_test.h  system_time.c  system_time.h  update.c  update.h  update_config.h.example  wifi_manager.c  wifi_prov.c  wifi_prov.h
main/core/autotuning/: astrom_hagglund.c  astrom_hagglund.h  autotuning.c  autotuning.h  ziegler_nichols.c  ziegler_nichols.h
main/core/ws_server/: ws_server.c  ws_server.h
main/drivers/config/: CMakelists.txt  DEV_Config.c  DEV_Config.h
main/drivers/display/: CMakelists.txt  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/drivers/io/: CH422G.c  CMakelists.txt
main/drivers/sensor/: CMakelists.txt  sensor.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: README_statusbar.md  statusbar_manager.c  statusbar_manager.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_statusbar.c  ui_comp_statusbar.h
main/ui/images/: ui_img_arrowicon_1_png.c  ui_img_buttonminus_png.c  ui_img_buttonminuspressed_png.c  ui_img_buttonplus_1_png.c  ui_img_buttonpluspressed_png.c  ui_img_iconbt_png.c  ui_img_iconheating_png.c  ui_img_iconsettings_png.c  ui_img_iconstatistic_png.c  ui_img_iconupdate_png.c  ui_img_iconwarn_png.c  ui_img_iconwifi_png.c  ui_img_img_bt_png.c  ui_img_img_cooling_png.c  ui_img_img_heating2_png.c  ui_img_img_wifi_png.c  ui_img_imgsettings_png.c  ui_img_logoblanco_png.c  ui_img_qrcode_png.c
main/ui/screens/: ui_Devmode.c  ui_ScreenAjustes.c  ui_ScreenBT.c  ui_ScreenBootlogo.c  ui_ScreenEstadisticas.c  ui_ScreenHome.c  ui_ScreenWifi.c
