idf_component_register(
    SRCS 
        "bootloader_main.c"
        "integrity_checker.c"  
        "sd_recovery.c"
        "recovery_mode.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        esp_common
        nvs_flash
        esp_partition
        fatfs
        driver
        app_update
        mbedtls
        freertos
        spiffs
    PRIV_REQUIRES
        esp_log
        vfs
) 